added some test need to rethink subtraction?
added some test need to rethink subtraction?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Reverse Polish Notation Calculator</string>
+    <string name="enter">Enter</string>
 </resources>
